I change the css

--- a/CozyCorner/about.html
+++ b/CozyCorner/about.html
@@ -186,19 +186,19 @@
                 <h1>Useful Links</h1>
                 <ul>
                     <li>
-                        <a href="#">Home</a>
+                        <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="#">Products</a>
+                        <a href="products.html">Products</a>
                     </li>
                     <li>
-                        <a href="#">Rooms</a>
+                        <a href="rooms.html">Rooms</a>
                     </li>
                     <li>
-                        <a href="#">About Us</a>
+                        <a href="about.html">About Us</a>
                     </li>
                     <li>
-                        <a href="#">Contact</a>
+                        <a href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
