--- a/CozyCorner/products.html
+++ b/CozyCorner/products.html
@@ -54,6 +54,10 @@
             </div>
             <div class="sidebar">
                 <label for="toggle-sidebar" class="close-btn"><i class="fa-solid fa-xmark"></i></label>
+                <div class="search-box">
+                    <input type="text" placeholder="Search products">
+                    <button>SEARCH</button>
+                </div>
                 <h2>Filter By Price</h2>
                 <input type="range" min="120" max="14510"  class="price-range">
                 <div class="filter_price">
@@ -104,95 +108,67 @@
         <div class="section2_products">
             <div class="products">
                 <div class="item">
-                    <img src="./Assets/Images/cabinet.png" alt="Sofa">
-                    <div class="details">
-                        <div class="product_type">
-                            Cabinet
-                        </div>
-                        <div class="product_name">
-                            Wall Hanging Cabinet
-                        </div>
-                        <div class="product_price">
-                            $840.00
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <img src="./Assets/Images/stool.png" alt="Vase">
-                        <div class="details">
-                            <div class="product_type">
-                                Bathroom
-                            </div>
-                            <div class="product_name">
-                                Wooden Bath Room Stool
-                            </div>
-                            <div class="product_price">
-                                $220.50
-                            </div>
-                        </div>
-                </div>
-                <div class="item">
-                    <div class="product_image">
-                        <img src="./Assets/Images/white_vase.png" alt="Sofa">
-                    </div>
-                    <div class="details">
-                        <div class="product_type">
-                            Home Office
-                        </div>
-                        <div class="product_name">
-                            Egyptian Vase
-                        </div>
-                        <div class="product_price">
-                            $400.00
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <img src="./Assets/Images/wooden_table.png" alt="Sofa">
+                    <img src="./Assets/Images/circle_mirror.png" alt="Mirror">
                     <div class="details">
                         <div class="product_type">
                             Bathroom
                         </div>
                         <div class="product_name">
-                            Bathroom Wooden Table
+                            Bathroom Golden Ring Mirror
                         </div>
                         <div class="product_price">
-                            $550.00
+                            $124.25
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="./Assets/Images/wooden_table.png" alt="">
+                        <div class="details">
+                            <div class="product_type">
+                                Bathroom
+                            </div>
+                            <div class="product_name">
+                                Bathroom Wooden Table
+                            </div>
+                            <div class="product_price">
+                                $550.00
+                            </div>
+                        </div>
+                </div>
+                <div class="item">
+                    <div class="product_image">
+                        <img src="./Assets/Images/single_chair.png" alt="">
+                    </div>
+                    <div class="details">
+                        <div class="product_type">
+                            Bedroom
+                        </div>
+                        <div class="product_name">
+                            Bedroom Single Chair
+                        </div>
+                        <div class="product_price">
+                            $504.00
                         </div>
                     </div>
                 </div>
             </div>
             <div class="products">
                 <div class="item">
-                    <img src="./Assets/Images/bathtub.png" alt="Sofa">
+                    <img src="./Assets/Images/working_chair.png" alt="">
                     <div class="details">
                         <div class="product_type">
-                            Bathroom
+                            Home Office
                         </div>
                         <div class="product_name">
-                            Ceramic Oval Bathtub
+                            Beige Working Chair With Armrest
                         </div>
                         <div class="product_price">
-                            $11,200.00
+                            $784.00
                         </div>
                     </div>
                 </div>
                 <div class="item">
-                    <img src="./Assets/Images/chair.png" alt="Sofa">
-                    <div class="details">
-                        <div class="product_type">
-                            Chair
-                        </div>
-                        <div class="product_name">
-                            Modern Emerald Fabric Chair
-                        </div>
-                        <div class="product_price">
-                            $1,200.00
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <img src="./Assets/Images/lamp.png" alt="Sofa">
+                    <img src="./Assets/Images/lamp.png" alt="">
                     <div class="details">
                         <div class="product_type">
                             Home Office
@@ -206,16 +182,109 @@
                     </div>
                 </div>
                 <div class="item">
-                    <img src="./Assets/Images/master_bedroom.png" alt="Sofa">
+                    <img src="./Assets/Images/blue_fabric_chair.png" alt="">
                     <div class="details">
                         <div class="product_type">
                             Bedroom
                         </div>
                         <div class="product_name">
-                            King Size Master Bedroom
+                            Blue Comfy Fabric Chair
                         </div>
                         <div class="product_price">
-                            $14,500.50
+                            $580.50
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="products">
+                <div class="item">
+                    <img src="./Assets/Images/wooden_stool.png" alt="">
+                    <div class="details">
+                        <div class="product_type">
+                            Kitchen
+                        </div>
+                        <div class="product_name">
+                            Brown Circle Chair
+                        </div>
+                        <div class="product_price">
+                            $224.00
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="./Assets/Images/sofa.png" alt="">
+                    <div class="details">
+                        <div class="product_type">
+                            Living Room
+                        </div>
+                        <div class="product_name">
+                            Brown Living Room Sofa
+                        </div>
+                        <div class="product_price">
+                            $1,200.00
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="./Assets/Images/bathtub.png" alt="">
+                    <div class="details">
+                        <div class="product_type">
+                            Bathroom
+                        </div>
+                        <div class="product_name">
+                            Ceramic Oval Bathtub
+                        </div>
+                        <div class="product_price">
+                            $11,200.00
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="products">
+                <div class="item">
+                    <img src="./Assets/Images/white_vase.png" alt="">
+                    <div class="details">
+                        <div class="product_type">
+                            Home Office
+                        </div>
+                        <div class="product_name">
+                            Egyptian Vase
+                        </div>
+                        <div class="product_price">
+                            $400.00
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="./Assets/Images/green_sofa.png" alt="">
+                    <div class="details">
+                        <div class="product_type">
+                            Living Room
+                        </div>
+                        <div class="product_name">
+                            Green Living Room Sofa
+                        </div>
+                        <div class="item-price">
+                            <span class="product_price_crossed">
+                                $1,840.00
+                            </span>
+                            <span class="product_price">
+                                $1,200.00
+                            </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="./Assets/Images/master_bedroom.png" alt="">
+                    <div class="details">
+                        <div class="product_type">
+                            Bedroom
+                        </div>
+                        <div class="product_name">
+                            King Size Master Bed
+                        </div>
+                        <div class="product_price">
+                            $14,500.00
                         </div>
                     </div>
                 </div>
@@ -223,5 +292,99 @@
         </div>
     </section>
     <!-- SECTION 2 END -->
+    <!-- FOOTER START -->
+    <footer class="site-footer">
+        <div class="footer-container">
+            <div class="footer-col-1">
+                <ul>
+                    <li>
+                        <img src="./Assets/Images/logo.png" alt="logo">
+                    </li>
+                    <li>
+                        <a href="#">3538 Torrance Blvd, Torrance, CA 90503, USA</a>
+                    </li>
+                    <li>
+                        <a href="#">+1 123 456 7890</a>
+                    </li>
+                    <li>
+                        <a href="#">info@example.com</a>
+                    </li>
+                    <li>
+                        <a href="#">Visit Our Store</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer-col-2">
+                <h1>Useful Links</h1>
+                <ul>
+                    <li>
+                        <a href="index.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="products.html">Products</a>
+                    </li>
+                    <li>
+                        <a href="rooms.html">Rooms</a>
+                    </li>
+                    <li>
+                        <a href="about.html">About Us</a>
+                    </li>
+                    <li>
+                        <a href="contact.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer-col-3">
+                <h1>Rooms</h1>
+                <ul>
+                    <li>
+                        <a href="#">Living Room</a>
+                    </li>
+                    <li>
+                        <a href="#">Bedroom</a>
+                    </li>
+                    <li>
+                        <a href="#">Kitchen</a>
+                    </li>
+                    <li>
+                        <a href="#">Bath Room</a>
+                    </li>
+                    <li>
+                        <a href="#">Home Office</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer-col-4">
+                <h1>Stay In Touch</h1>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </p>
+                <div class="app_links">
+                    <a href="https://www.facebook.com/" target="_blank">
+                        <i class="fa-brands fa-square-facebook"></i>
+                    </a>
+                    <a href="https://x.com/" target="_blank">
+                        <i class="fa-brands fa-twitter"></i>
+                    </a>
+                    <a href="https://www.youtube.com/">
+                        <i class="fa-brands fa-youtube"></i>
+                    </a>
+                    <a href="https://www.instagram.com/">
+                        <i class="fa-brands fa-square-instagram"></i>
+                        <!-- <i class="fa-brands fa-instagram"></i> -->
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="attribution">
+            <p>
+                Copyright &copy; 2025 Online Furniture Store
+            </p>
+            <p>
+                Powered by Online Furniture Store
+            </p>
+        </div>
+    </footer>
+    <!-- FOOTER END -->
 </body>
 </html>
